# MFCC_DTW

./: .gitignore  CMakeLists.txt  LICENSE  README.md
full/: CMakeLists.txt  compare.cpp
includes/: steps.h  utils.h
src/: dct.cpp  dft.cpp  filterbanks.cpp  framing.cpp  logarithm.cpp  powerspectrum.cpp  preemphasis.cpp  steps.cpp  utils.cpp  windowing.cpp
steps/: CMakeLists.txt  dtw.cpp  filterbanks.cpp  framing.cpp  logarithm.cpp  windowing.cpp
